# glendza.com

./: .env.example  .env.make.example  .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml
.github/: pull_request_template.md
.github/actions/docker-build/: action.yml
.github/workflows/: build-and-push-image.yml  run-ansible.yml
ansible/: ansible.cfg  inventory.ini
ansible/playbooks/: build_and_deploy_app.yml  main.yml  setup_server.yml
ansible/roles/build_python_wheel/tasks/: main.yml
ansible/roles/create_env_file/tasks/: main.yml
ansible/roles/deploy_python_wheels/tasks/: main.yml
ansible/roles/init_django_app/handlers/: main.yml
ansible/roles/init_django_app/tasks/: main.yml
ansible/roles/init_django_app/templates/: django-init.service.j2
ansible/roles/setup_ansible_dependencies/tasks/: main.yml
ansible/roles/setup_app_user/tasks/: main.yml
ansible/roles/setup_certbot/tasks/: main.yml
ansible/roles/setup_certificate_location/main/: main.yml
ansible/roles/setup_firewall/tasks/: main.yml
ansible/roles/setup_gunicorn/defaults/: main.yml
ansible/roles/setup_gunicorn/tasks/: main.yml
ansible/roles/setup_gunicorn/templates/: gunicorn.service.j2
ansible/roles/setup_nginx/defaults/: main.yml
ansible/roles/setup_nginx/tasks/: main.yml
ansible/roles/setup_nginx/templates/: nginx.conf.j2  nginx.service.j2
ansible/roles/setup_nginx_ssl/defaults/: main.yml
ansible/roles/setup_nginx_ssl/tasks/: main.yml
ansible/roles/setup_nginx_ssl/templates/: nginx.ssl.conf.j2
ansible/roles/setup_python_virtualenv/tasks/: main.yml
ansible/vars/: host_vars.yml
ansible/vars/encrypted_vars/: app_env_vars.yml  host_vars.yml
src/glendza/web_app/: manage.py  settings.py  types.py  urls.py
src/glendza/web_app/apps/core/blocks/: hero_section_block.py
src/glendza/web_app/apps/core/migrations/: 0001_initial.py  0002_blogindexpage_blogpage.py
src/glendza/web_app/apps/core/models/: __init__.py
src/glendza/web_app/apps/core/models/pages/: blog_page.py  home_page.py
src/glendza/web_app/apps/core/models/snippets/: header_content.py  menu.py
src/glendza/web_app/apps/core/static/css/: contact-page.css  main.css
src/glendza/web_app/apps/core/static/js/: main.js
src/glendza/web_app/apps/core/templates/core/: home_page.html
src/glendza/web_app/apps/core/templates/core/blog/: blog_page.html
src/glendza/web_app/apps/core/templates/core/common/: base.html  main_layout.html  pagination.html
src/glendza/web_app/apps/core/templates/core/contact/: contact_page.html  contact_page_landing.html
src/glendza/web_app/apps/core/templatetags/: layout_tags.py  menu_tags.py  pagination_tags.py
src/glendza/web_app/apps/user/: apps.py  models.py
src/glendza/web_app/apps/user/migrations/: 0001_initial.py
web-app/: .env.example  .gitignore  README.md  pyproject.toml
web-app/src/glendza/web_app/: settings.py  urls.py  wsgi.py
web-app/src/glendza/web_app/apps/core/: apps.py  views.py  wagtail_hooks.py
web-app/src/glendza/web_app/apps/core/blocks/: __init__.py  hero_section_block.py
web-app/src/glendza/web_app/apps/core/migrations/: 0002_blogindexpage_blogpage.py  0003_blogindexpage_blog_posts_per_page_and_more.py  0004_contactpage_contactemailformfield.py
web-app/src/glendza/web_app/apps/core/models/: __init__.py
web-app/src/glendza/web_app/apps/core/models/pages/: blog_index_page.py  blog_page.py  contact_page.py
web-app/src/glendza/web_app/apps/core/models/settings/: main_navigation_menu.py
web-app/src/glendza/web_app/apps/core/models/snippets/: footer_content.py
web-app/src/glendza/web_app/apps/core/static/css/: main.css
web-app/src/glendza/web_app/apps/core/static/js/: main.js
web-app/src/glendza/web_app/apps/core/templates/core/blocks/: hero_section_block.html
web-app/src/glendza/web_app/apps/core/templates/core/blog/: blog_index_page.html
web-app/src/glendza/web_app/apps/core/templates/core/common/: base.html
web-app/src/glendza/web_app/apps/core/templates/core/snippets/: footer.html  header.html  navmenu.html
web-app/src/glendza/web_app/apps/core/templatetags/: navigation_tags.py
web-app/src/glendza/web_app/apps/testapp/: apps.py  views.py
web-app/src/glendza/web_app/apps/user/: admin.py
(+2 files in other folders)
