[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glendza"
version = "0.0.1"
authors = [
  { name = "Miloš Glendža", email = "milos.991@gmail.com" }
]
description = "My personal website."
readme = "README.md"
requires-python = ">=3.12.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "Django>=5.1.2,<5.2",
  "django-environ>=0.11.2,<0.12",
  "wagtail>=6.3.2,<6.4",
]

[project.optional-dependencies]
dev = [
  "black>=24.10.0,<25",
  "django-debug-toolbar>=4.4.6,<5",
  "isort>=5.13.2,<6",
  "pytest>=8.3.3,<9",
]

[tool.hatch.build.targets.wheel]
packages = [
  "src/glendza",
]

include = [
  "glendza/web_app/static/**",
]

[project.scripts]
gmanage = "glendza.web_app.manage:main"

[tool.pytest.ini_options]
pythonpath = [".", "src"]
addopts = ["--import-mode=importlib"]

[tool.black]
line-length = 119
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 119
