[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glendza"
version = "0.0.1"
authors = [
  { name = "Miloš Glendža", email = "milos.991@gmail.com" }
]
description = "My personal website."
readme = "README.md"
requires-python = ">=3.12.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "Django>=5.1.4,<5.2",
  "django-environ>=0.11.2,<0.12",
  "wagtail>=6.3.2,<6.4",
]

[project.optional-dependencies]
dev = [
  "black>=24.10.0,<25",
  "django-debug-toolbar>=4.4.6,<5",
  "djlint>=1.36.4,<2",
  "isort>=5.13.2,<6",
  "pytest>=8.3.3,<9",
]

[tool.hatch.build.targets.wheel]
packages = [
  "src/glendza",
]

include = [
  "glendza/web_app/static/**",
]

[project.scripts]
gmanage = "glendza.web_app.manage:main"

[tool.pytest.ini_options]
pythonpath = [".", "src"]
addopts = ["--import-mode=importlib"]

[tool.black]
line-length = 119
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 119

[tool.djlint]
profile = "django"
line_length = 119
indent = 2
indent_with_spaces = true
blank_line_after_tag="load,extends,include"
blank_line_before_tag="load,extends,include"
close_void_tags=true
format_js=true
format_css=true
format_attribute_template_tags=true
line_break_after_multiline_tag=true

[tool.djlint.js]
indent_size=2

[tool.djlint.css]
indent_size=2
